--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             <span>Lead Time: 12-14 Weeks</span>
           </div>
         </div>
-        <button href="product.html?product=12">View Product</button>
+        <a href="product.html?product=559"><button>View Product</button></a>
       </div>
       <div class="product-image">
         <img src="https://store.leibal.com/cdn/shop/t/24/assets/avr-dining-chair-6.jpg?v=96125140651365390181717481387" alt="ARV Dining Chair with Armrest">
