--- a/public/admin-dashboard/contact-us.html
+++ b/public/admin-dashboard/contact-us.html
@@ -34,7 +34,7 @@
         gap: 2rem;
       }
       .header-status {
-        text-align: center;
+        text-align: left;
       }
       .status-dot {
         display: inline-block;
