--- a/public/admin-dashboard/sidebar.html
+++ b/public/admin-dashboard/sidebar.html
@@ -32,7 +32,7 @@
         <span>Orders</span>
         <ul>
           <li><a href="order-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Order List</a></li>
-          <li><a href="order-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Order Detail</a></li>
+          <li><a href="order-detail.html" class="sidebar-link"><span class="sidebar-dot"></span>Order Detail</a></li>
         </ul>
       </li>
       <li>
